レシピ抽出を追加

--- a/composes/docker-compose_develop.yaml
+++ b/composes/docker-compose_develop.yaml
@@ -27,4 +27,6 @@ services:
         hostname: ai-api
         build: ../ai-api
         tty: true
+        volumes:
+            - ../ai-api/src:/api/src
         restart: always
