登録時に少数を入力できるように設定 レシピ画像がある時のロードエラーを修正 各種認証を追加

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -13,6 +13,12 @@ server {
     ssl_certificate      /etc/nginx/keys/server.crt;
     ssl_certificate_key  /etc/nginx/keys/server.key;
     
+    proxy_hide_header Access-Control-Allow-Origin;
+    add_header Access-Control-Allow-Origin *;
+    proxy_hide_header Access-Control-Allow-Headers;
+    add_header Access-Control-Allow-Headers *;
+    proxy_hide_header Access-Control-Allow-Methods;
+    add_header Access-Control-Allow-Methods *;    
     client_max_body_size 10M;
 
     include /etc/nginx/conf.d/include/*.conf;
