--- a/composes/docker-compose_develop.yaml
+++ b/composes/docker-compose_develop.yaml
@@ -15,6 +15,8 @@ services:
             context: ../pocketbase_custom
         hostname: pocketbasec
         restart: always
+        environment:
+            - AUTHROOT=https://dev-makeck.mattuu.com/auth
         volumes:
             - ../pocketbase_custom/pbdata:/pocketbase/pb_data
     redis:
